--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=locations-service
+
+# DATABASE CONFIGURATION
+spring.datasource.url=jdbc:postgresql://localhost:5433/geodatabase
+spring.datasource.username=postgres
+spring.datasource.password=post_hack
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
+
+# JPA / HIBERNATE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# API Endpoints
+spring.web.servlet.path=/api/locations
