Add initial docker wrapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,14 @@ spring.datasource.password=post_hack
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
-# JPA / HIBERNATE
-spring.jpa.hibernate.ddl-auto=update
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.hackathon=DEBUG
 
 # API Endpoints
 spring.web.servlet.path=/api/locations
