add new endpoints & reworked filter locations

--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-spatial</artifactId>
             <version>6.3.1.Final</version>
         </dependency>
