.env & properties redesigned

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# APP PORT
+# APP INFO
 APP_PORT=8081
+SPRING_APPLICATION_NAME=locations-service
 
 # PostgreSQL Connection
 SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/your_database
@@ -7,3 +8,13 @@ SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=your_password
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
 SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
+
+SPRING_JPA_SHOW_SQL=true
+
+#HIBERNATE
+SPRING_JPA_SHOW_SQL=true
+SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+
+# Logging Configuration
+LOGGING_LEVEL_ORG_SPRINGFRAMEWORK=INFO
+LOGGING_LEVEL_COM_HACKATHON=DEBUG
