--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <version>6.3.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
