--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-spring.application.name=locations-service
+spring.application.name=${SPRING_APPLICATION_NAME}
 
 # DATABASE CONFIGURATION
-spring.datasource.url=jdbc:postgresql://localhost:5433/geodatabase
-spring.datasource.username=postgres
-spring.datasource.password=post_hack
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
 #spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
-spring.jpa.show-sql=true
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 
 # Logging Configuration
-logging.level.org.springframework=INFO
-logging.level.com.hackathon=DEBUG
+logging.level.org.springframework=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK}
+logging.level.com.hackathon=${LOGGING_LEVEL_COM_HACKATHON}
