add rabbitMQ implementation

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
 # Logging Configuration
 LOGGING_LEVEL_ORG_SPRINGFRAMEWORK=INFO
 LOGGING_LEVEL_COM_HACKATHON=DEBUG
+
+# RabbitMQ
+CHANGE_ID_TOPIC =
+
+
+
