--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,10 @@
             <artifactId>jts-core</artifactId>
             <version>1.19.0</version> <!-- або новіша -->
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
