--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 # Logging Configuration
 logging.level.org.springframework=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK}
 logging.level.com.hackathon=${LOGGING_LEVEL_COM_HACKATHON}
+
+amqp.exchange.change-correlation-id = ${CHANGE_ID_TOPIC}
+logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
+spring.rabbitmq.host=localhost
+spring.rabbitmq.dynamic=true
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
