add communication with text moderation service

--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,10 @@ LOGGING_LEVEL_COM_HACKATHON=DEBUG
 # RabbitMQ
 CHANGE_ID_TOPIC =
 
+MODERATION_TOPIC=
+
+MODERATION_QUEUE_REQUEST=
+MODERATION_QUEUE_RESPONSE=
+
 
 
