--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=8081
 
 # DATABASE CONFIGURATION
 spring.datasource.url=${SPRING_DATASOURCE_URL}
@@ -23,6 +24,11 @@ security.jwt.refresh-token-expiration=252000000
 
 #RabbitMQ
 amqp.exchange.change-correlation-id = ${CHANGE_ID_TOPIC}
+amqp.exchange.moderation = ${MODERATION_TOPIC}
+
+amqp.queue.moderation.request = ${MODERATION_QUEUE_REQUEST}
+amqp.queue.moderation.response = ${MODERATION_QUEUE_RESPONSE}
+
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
 spring.rabbitmq.host=localhost
 spring.rabbitmq.dynamic=true
