--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=${SPRING_APPLICATION_NAME}
-server.port=8081
+server.port=8080
 
 # DATABASE CONFIGURATION
 spring.datasource.url=${SPRING_DATASOURCE_URL}
@@ -33,5 +33,5 @@ logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
 spring.rabbitmq.host=localhost
 spring.rabbitmq.dynamic=true
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
