--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>1.19.0</version> <!-- або новіша -->
         </dependency>
         <dependency>
+            <groupId>com.bedatadriven</groupId>
+            <artifactId>jackson-datatype-jts</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
