add email verification

--- a/.env.example
+++ b/.env.example
@@ -21,14 +21,16 @@ LOGGING_LEVEL_COM_HACKATHON=DEBUG
 
 # RabbitMQ
 CHANGE_ID_TOPIC =
-
 MODERATION_TOPIC=
-
 MODERATION_QUEUE_REQUEST=
 MODERATION_QUEUE_RESPONSE=
 
 RABBITMQ_USER=
 RABBITMQ_PASSWORD=
+
+#EMAIL
+EMAIL_USER=
+EMAIL_PASSWORD=
 
 
 
