--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,14 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username= ${RABBITMQ_USER}
 spring.rabbitmq.password= ${RABBITMQ_PASSWORD}
 
+#Caching
+spring.cache.jcache.config=classpath:ehcache.xml
+
+#Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USER}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
