--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,4 @@ spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+qgis.server.uri=${QGIS_SERVER_URI}
