docker for backend only

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ amqp.queue.moderation.request = ${MODERATION_QUEUE_REQUEST}
 amqp.queue.moderation.response = ${MODERATION_QUEUE_RESPONSE}
 
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=host.docker.internal
 spring.rabbitmq.dynamic=true
 spring.rabbitmq.port=5672
 spring.rabbitmq.username= ${RABBITMQ_USER}
